--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -34,6 +35,8 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^25.1.0",
+    "@types/swagger-ui-express": "^4.1.8",
+    "openapi-types": "^12.1.3",
     "prisma": "6.19.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
