fix(backend): all endpoint & documentation API

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,6 @@
+PORT=4000
+BACKEND_URL=http://localhost:4000
+FRONTEND_URL=http://localhost:3000
 DATABASE_URL="postgresql://sibyl:sibyl@localhost:5432/sibyl_case_workspace"
-JWT_SECRET=sibyl_case_workspace123
+JWT_SECRET=sibyl_legal_case_workspace_backend_api_version_1_0_0
 JWT_EXPIRES_IN=15m
