--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "Asher Azriel Ginting",
   "license": "ISC",
   "packageManager": "pnpm@10.26.2",
   "dependencies": {
@@ -23,6 +23,7 @@
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "swagger-ui-express": "^5.0.1"
