--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,14 +3,10 @@ FROM node:20-alpine
 WORKDIR /app
 
 COPY package.json ./
-
 RUN corepack enable && pnpm install
 
 COPY . .
 
-RUN pnpm prisma generate
-RUN pnpm build
-
 EXPOSE 4000
 
-CMD ["pnpm", "start"]
+CMD ["sh", "-c", "npx prisma generate && npx prisma migrate deploy && pnpm build && pnpm start"]
