--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,6 +7,9 @@ RUN corepack enable && pnpm install
 
 COPY . .
 
+RUN npx prisma generate
+RUN pnpm build
+
 EXPOSE 4000
 
-CMD ["sh", "-c", "npx prisma generate && npx prisma migrate deploy && pnpm build && pnpm start"]
+CMD ["pnpm", "start"]
