--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,12 +2,18 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-COPY package.json ./
+COPY package.json pnpm-lock.yaml ./
+
 RUN corepack enable && pnpm install
 
 COPY . .
 
 RUN npx prisma generate
+
+RUN pnpm migrate:deploy
+
+RUN pnpm seed
+
 RUN pnpm build
 
 EXPOSE 4000
