fix(deployment): err

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,19 +3,14 @@ FROM node:20-alpine
 WORKDIR /app
 
 COPY package.json pnpm-lock.yaml ./
-
-RUN corepack enable && pnpm install
+RUN corepack enable && pnpm install --frozen-lockfile
 
 COPY . .
 
 RUN npx prisma generate
-
-RUN pnpm migrate:deploy
-
-RUN pnpm seed
-
+RUN npx prisma migrate deploy
 RUN pnpm build
 
 EXPOSE 4000
 
-CMD ["pnpm", "start"]
+CMD ["sh", "-c", "npx prisma db seed || true && pnpm start"]
