--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,13 +2,14 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-COPY package.json pnpm-lock.yaml ./
-RUN corepack enable && pnpm install --frozen-lockfile
+COPY package.json ./
+RUN corepack enable && pnpm install
 
 COPY . .
 
 RUN npx prisma generate
 RUN npx prisma migrate deploy
+
 RUN pnpm build
 
 EXPOSE 4000
