--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,10 +8,9 @@ RUN corepack enable && pnpm install
 COPY . .
 
 RUN npx prisma generate
-RUN npx prisma migrate deploy
 
 RUN pnpm build
 
 EXPOSE 4000
 
-CMD ["sh", "-c", "npx prisma db seed || true && pnpm start"]
+CMD ["sh", "-c", "npx prisma migrate deploy && npx prisma db seed || true && pnpm start"]
