fix(backend): configuration secure cookies

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,4 @@ FRONTEND_URL=http://localhost:3000
 DATABASE_URL="postgresql://sibyl:sibyl@localhost:5432/sibyl_case_workspace"
 JWT_SECRET=sibyl_legal_case_workspace_backend_api_version_1_0_0
 JWT_EXPIRES_IN=15m
+NODE_ENV=development
